Добавлен вывод списка меню удаления по ролям